# django-deployments

./: .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml
deploy/django/: todo-deployments.yaml
deploy/kubernetes/django/: todo-configmap.yaml  todo-deployments.yaml  todo-svc.yaml
todo/: settings.py
