[tool.poetry]
name = "kube"
version = "0.1.0"
description = ""
authors = ["Atsushi Toda <todaatsushi0@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
beartype = "^0.10.4"
django-environ = "^0.8.1"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
django-stubs = "^1.11.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
